line-smt-apis/force-app/main/default/objects/ActivityCarView__c.object
<CustomObject>
    <fields>
        <fullName>ActivityCarViewDate__c</fullName>
        <label>預約賞車日期</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ActivityID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Activity ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CarStyle__c</fullName>
        <label>車型</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChooseMethod__c</fullName>
        <label>選擇業代方式</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>自行指定</fullName>
                </value>
                <value>
                    <fullName>系統分配</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>經銷商</label>
        <referenceTo>Dealer__c</referenceTo>
        <relationshipLabel>預約賞車</relationshipLabel>
        <relationshipName>ActivityCarViewToDealer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExSalesRepresentative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>前銷售業代</label>
        <referenceTo>SalesRepresentative__c</referenceTo>
        <relationshipLabel>預約賞車 (前銷售業代)</relationshipLabel>
        <relationshipName>ActivityCarViewToExSalesRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>潛客</label>
        <referenceTo>Lead__c</referenceTo>
        <relationshipLabel>預約賞車</relationshipLabel>
        <relationshipName>ActivityCarViewToLead</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LineActivityCarViewID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Line 預約賞車 ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>會員姓名</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>預約賞車</relationshipLabel>
        <relationshipName>ActivityCarViewToMember</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PowerType__c</fullName>
        <label>動力</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRepresentative__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>銷售業代</label>
        <referenceTo>SalesRepresentative__c</referenceTo>
        <relationshipLabel>預約賞車</relationshipLabel>
        <relationshipName>ActivityCarViewToSalesRep</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Satisfaction__c</fullName>
        <label>滿意度</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>預約狀態</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>待確認</fullName>
                </value>
                <value>
                    <fullName>已確認</fullName>
                </value>
                <value>
                    <fullName>已取消</fullName>
                </value>
                <value>
                    <fullName>已完成</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>預約賞車</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ActivityID__c</columns>
        <columns>LineActivityCarViewID__c</columns>
        <columns>Member__c</columns>
        <columns>SalesRepresentative__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>預約賞車編號</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>